# libbasicutils

./: .gitignore  AUTHORS  Makefile.am  README  README.md  autogen.sh  configure.ac
debian/: changelog  control  copyright  rules
doc/: Doxyfile.in  Makefile.am
libltdl/: autogen.sh  configure.ac
scripts/: BasicUtils-config.in  Makefile.am
src/: BasicAllocator.h  BasicArray.h  BasicClassAccessor.h  BasicClassAccessorBase.h  BasicClassFactory.h  BasicClassFactoryBase.h  BasicClassGroupFactory.cpp  BasicClassGroupFactory.h  BasicCondition.cpp  BasicCondition.h  BasicCounter.h  BasicDebugger.cpp  BasicDebugger.h  BasicException.h  BasicFileLocation.cpp  BasicFileLocation.h  BasicFunctor.h  BasicGCAllocator.h  BasicLockable.cpp  BasicLockable.h  BasicObjCounter.h  BasicPipe.cpp  BasicPipe.h  BasicPluginInfo.h  BasicPluginManager.h  BasicProcess.cpp  BasicProcess.h  BasicRandomNumberGenerator.cpp  BasicRandomNumberGenerator.h  BasicReference.h  BasicRegex.h  BasicSignalCatch.cpp  BasicSignalCatch.h  BasicSmartPointer.h  BasicString.cpp  BasicThread.cpp  BasicThread.h  Makefile.am
tests/: Makefile.am  testHarness
tests/BasicDynamicClassTests/: Makefile.am  OverlapTest.cpp  SizeTest.cpp
tests/BasicDynamicClassTests/data/: OverlapTest.stdout.expect  SizeTest.stdout.expect
tests/BasicPluginTests/: DepCycleTest.cpp  Makefile.am  Plugin.h  PluginA.cpp  PluginB.cpp  PluginC.cpp  PluginD.cpp  PluginDependencyTest.cpp  PluginE.cpp  PluginF.cpp  PluginInstantiateTest.cpp  PluginLoadTest.cpp  SimplePluginTest.cpp
tests/BasicPluginTests/data/: DepCycleTest.stderr.expect  PluginDependencyTest.stdout.expect  PluginInstantiateTest.stdout.expect  PluginLoadTest.stdout.expect
tests/BasicSmartPointerTests/: DeallocationTest.cpp  DerefTest.cpp  Makefile.am  MultipleRefTest.cpp  NullAssignTest.cpp  RefCountTest.cpp
tests/BasicSmartPointerTests/data/: DeallocationTest.stdout.expect  DerefTest.stdout.expect  MultipleRefTest.stdout.expect  NullAssignTest.stdout.expect  RefCountTest.stdout.expect
