lib_LTLIBRARIES = libBasicUtils.la

libBasicUtils_include_HEADERS =\
	BasicException.h\
	BasicFileLocation.h\
	BasicSmartPointer.h\
	BasicCounter.h\
	BasicString.h\
	BasicRandomNumberGenerator.h\
	BasicArray.h\
	BasicDynamicClassFactory.h\
	BasicDynamicClassNodeBase.h\
	BasicDynamicClassNode.h\
	Zap.h\
	BasicClassGroupFactory.h\
	BasicClassGroup.h\
	BasicClassFactoryBase.h\
	BasicClassFactory.h\
	BasicClassAccessorBase.h\
	BasicClassAccessor.h\
	BasicClassGroupArray.h\
	BasicPluginProxy.h\
	BasicPluginManager.h\
	BasicPluginInfo.h\
	BasicClassRegistry.h\
	BasicStringTable.h\
	BasicCondition.h\
	BasicFunctor.h\
	BasicLockable.h\
	BasicRegex.h\
	BasicThread.h\
	BasicProcess.h\
	BasicDebugger.h\
	BasicPipe.h\
	BasicReference.h\
	BasicAllocator.h\
	BasicGCAllocator.h\
	BasicObjCounter.h\
	BasicSignalCatch.h

libBasicUtils_la_SOURCES =\
	BasicException.cpp\
	BasicFileLocation.cpp\
	BasicString.cpp\
	BasicRandomNumberGenerator.cpp\
	BasicDynamicClassFactory.cpp\
	BasicDynamicClassNodeBase.cpp\
	BasicClassGroupFactory.cpp\
	BasicPluginInfo.cpp\
	BasicClassRegistry.cpp\
	BasicStringTable.cpp\
	BasicCondition.cpp\
	BasicLockable.cpp\
	BasicRegex.cpp\
	BasicThread.cpp\
	BasicProcess.cpp\
	BasicDebugger.cpp\
	BasicPipe.cpp\
	BasicSignalCatch.cpp

libBasicUtils_includedir = $(includedir)/BasicUtils
